# agentrelay

./: .gitignore  404.html  CLAUDE.md  README.md  context.md  diagram-detailed.d2  diagram-no-private.d2  diagram-overview.html  diagram.puml  hooks.py  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  sitemap.xml  task_context.json
.claude/: settings.json
.githooks/: pre-commit
AGENT_COMM_PROTOCOL/: index.html
ARCHITECTURE/: index.html
BACKLOG/: index.html
DIAGRAM/: index.html
GUIDE/: index.html
HISTORY/: index.html
MIGRATION/: index.html
SCHEMA/: index.html
TESTING/: index.html
WORKFLOW/: index.html
api/: index.html
docs/: AGENT_COMM_PROTOCOL.md  AGENT_WORKFLOWS_KNOWLEDGE_CAPTURE.md  ARCHITECTURE.md  BACKLOG.md  COMPETITIVE_LANDSCAPE.md  DECISIONS.md  DESIGN_DECISIONS.md  DIAGRAM.md  GUIDE.md  HISTORY.md  MIGRATION.md  OPERATIONS.md  PROJECT_DESCRIPTION.md  PROJECT_PLAN.md  REPO_SETUP.md  SCHEMA.md  TDD_GROUP_POSSIBLE_IMPROVEMENTS.md  TESTING.md  WORKFLOW.md  WORKFLOW_DESCRIPTION.md  WORKFLOW_ORCHESTRATION_PROJECT_PLAN.md  diagram-detailed.d2  diagram-midlevel.d2  diagram-midlevel.html  diagram-no-impl.d2  diagram-no-private.d2  diagram-overview.d2  diagram-overview.html  diagram-standard.d2  diagram.d2  diagram.puml  diagram.puml.archived  index.md
examples/: index.html  mixed-default-and-explicit-workstreams.yaml
graphs/: README.md  agentrelaydemos.yaml  demo.yaml  quick_parallel.yaml
search/: search_index.json
stylesheets/: extra.css
test/: conftest.py  test_agent.py  test_agent_task.py  test_agent_task_graph.py  test_cli.py  test_docs_examples.py  test_environments.py  test_graph_index.py  test_instructions.py  test_integration_contracts.py  test_integration_errors.py  test_ops_git.py  test_ops_signals.py  test_ops_tmux.py  test_orchestrator.py  test_orchestrator_listener.py  test_path_validation.py  test_protocol_manifest.py  test_reset_graph.py  test_reset_ops.py  test_reset_pr.py  test_reset_repo.py  test_reset_task.py  test_reset_to.py  test_reset_workstream.py  test_resolved.py  test_resolved_validation.py  test_run_graph.py  test_run_graph_integration.py  test_session.py  test_task.py  test_task_graph.py  test_task_graph_builder.py  test_task_graph_workstreams.py  test_task_launcher.py  test_task_runner.py  test_task_runtime.py  test_task_runtime_builder.py  test_task_runtime_views.py  test_tools.py  (+5 more)
tools/: __init__.py  d2_filters.py  docker_build.sh  e2e_check.sh  e2e_reset.sh  e2e_run.sh  generate_diagrams.py  generate_module_diagrams.py  generate_overview.py  generate_standard_diagram.py  (+1 more)
(+574 files in other folders)
