[project]
authors = [{name = "Duane Goodner", email = "dmgoodner@gmail.com"}]
dependencies = []
name = "agentrelay"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrelay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: test is slow (>5s)",
    "integration: test requires running Claude CLI",
]

[tool.black]
line-length = 88
extend-exclude = '\.pixi/'

[tool.isort]
profile = "black"
src_paths = ["src"]
skip_glob = [".pixi/*"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
exclude = ["tests/**", ".pixi/**"]
