[project]
authors = [{name = "Duane Goodner", email = "dmgoodner@gmail.com"}]
dependencies = ["pyyaml>=6.0.3,<7"]
name = "agentrelay"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[project.scripts]
agentrelay-complete = "agentrelay.agent_sdk.cli:complete"
agentrelay-complete-no-pr = "agentrelay.agent_sdk.cli:complete_no_pr"
agentrelay-failed = "agentrelay.agent_sdk.cli:failed"
agentrelay-concern = "agentrelay.agent_sdk.cli:concern"
agentrelay-ops-concern = "agentrelay.agent_sdk.cli:ops_concern"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrelay"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: test is slow (>5s)",
    "integration: test requires running Claude CLI",
]

[tool.black]
line-length = 88
extend-exclude = '\.pixi/'

[tool.isort]
profile = "black"
src_paths = ["src"]
skip_glob = [".pixi/*"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
exclude = [".pixi/**"]
extraPaths = ["src"]
